BUG: 256896

request spell dictionaries with their full code (language_COUNTRY),
because this is the format hunspell/myspell have their dicts named in


svn path=/trunk/KDE/kdesdk/lokalize/; revision=1274522